<resources>
    <string name="app_name">Listed Task</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_button_content">TODO</string>
    <string name="add">add</string>
    <string name="links">Links</string>
    <string name="courses">Courses</string>
    <string name="campaigns">Campaigns</string>
    <string name="profile">Profile</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_analytics">View Analytics</string>
    <string name="top_links">Top Links</string>
    <string name="recent_links">Recent Links</string>
    <string name="view_all_links">View all Links</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="icons">Icons</string>
    <string name="good_morning">Good morning</string>
    <string name="ajay_manva">Ajay Manva</string>
    <string name="count">123</string>
    <string name="today_s_clicks">Today\'s clicks</string>
    <string name="location_name">Ahemedab..</string>
    <string name="top_location">Top Location</string>
    <string name="social_name">Instagram</string>
    <string name="top_source">Top Source</string>
    <string name="date">11:00 - 12:00</string>
    <string name="best_time">Best Time</string>
    <string name="sample_link_name">Sample link name...</string>
    <string name="_22_aug_2022">22 Aug 2022</string>
    <string name="_2323">2323</string>
    <string name="clicks">Clicks</string>
    <string name="https_samplelink_oia_bio_ashd">https://samplelink.oia.bio/ashd...</string>
    <string name="todo">TODO</string>
    <string name="overview">Overview</string>
    <string name="clipboard_message">Smart link copied to clipboard</string>
    <string name="label">Label</string>
    <string name="yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="mmm">MMM</string>
</resources>