<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/links_menu"
        android:icon="@drawable/link"
        android:title="@string/links"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/courses_menu"
        android:icon="@drawable/magazine"
        android:title="@string/courses"
        app:showAsAction="ifRoom" />

    <item
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/campaigns_menu"
        android:icon="@drawable/fast_forward"
        android:title="@string/campaigns"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile_menu"
        android:icon="@drawable/user"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>